added payments feature

--- a/templates/success.html
+++ b/templates/success.html
@@ -464,7 +464,7 @@
     <div class="container">
         <h1>Payment Successful!</h1>
         <p class="subtitle">Thank you for your payment. The receipt has been generated and recorded in our system.</p>
-        <p class="subtitle">For any enquiries, contact us at <a href="tel:+917994631745">+91 7994631745</a></p>
+        <p class="subtitle">Contact us at <a href="tel:+917994631745">+91 7994631745</a></p>
         {% if payment_id %}
         <div class="details">
             <h3>
